tools/cubism-bindgen/fixtures/expected/x86_64-apple-darwin.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type csmByte = ::core::ffi::c_uchar;
pub type csmBool = ::core::ffi::c_int;
pub type csmInt32 = ::core::ffi::c_int;
pub type csmUint32 = ::core::ffi::c_uint;
pub type csmFloat32 = f32;
pub type csmSizeInt = ::core::ffi::c_ulonglong;
pub type csmVersion = csmUint32;
pub type csmLogFunction = ::core::option::Option<
    unsafe extern "C" fn(message: *const ::core::ffi::c_char),
>;
pub type csmMocVersion = ::core::ffi::c_uint;
pub type _bindgen_ty_1 = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmMoc {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmModel {
    _unused: [u8; 0],
}
pub const csmMocVersion_csmMocVersion_Unknown: csmMocVersion = 0;
pub const csmMocVersion_csmMocVersion_50: csmMocVersion = 5;
pub const csmAlignofMoc: _bindgen_ty_1 = 64;
pub const csmAlignofModel: _bindgen_ty_1 = 16;
unsafe extern "C" {
    pub fn csmGetVersion() -> csmVersion;
    pub fn csmGetLatestMocVersion() -> csmMocVersion;
    pub fn csmGetMocVersion(
        mocBytes: *const ::core::ffi::c_void,
        mocSize: csmSizeInt,
    ) -> csmMocVersion;
    pub fn csmHasMocConsistency(
        mocBytes: *const ::core::ffi::c_void,
        mocSize: csmSizeInt,
    ) -> csmBool;
    pub fn csmReviveMocInPlace(
        mocBytes: *mut ::core::ffi::c_void,
        mocSize: csmSizeInt,
    ) -> *mut csmMoc;
    pub fn csmGetSizeofModel(moc: *const csmMoc) -> csmSizeInt;
    pub fn csmInitializeModelInPlace(
        moc: *const csmMoc,
        modelMemory: *mut ::core::ffi::c_void,
        modelSize: csmSizeInt,
    ) -> *mut csmModel;
    pub fn csmUpdateModel(model: *mut csmModel);
    pub fn csmReadCanvasInfo(
        model: *const csmModel,
        outSizeInPixels: *mut csmFloat32,
        outOriginInPixels: *mut csmFloat32,
        outPixelsPerUnit: *mut csmFloat32,
    );
    pub fn csmGetParameterCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetPartCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetDrawableCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetDrawableVertexPositions(
        model: *const csmModel,
    ) -> *mut *const csmFloat32;
    pub fn csmGetDrawableIndices(
        model: *const csmModel,
    ) -> *mut *const ::core::ffi::c_ushort;
    pub fn csmResetDrawableDynamicFlags(model: *mut csmModel);
    pub fn csmSetLogFunction(handler: csmLogFunction);
}
